<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- File selector -->
    <string name="action_settings">Settings</string>
    <string name="files">Files</string>
    <string name="directories">Folders</string>
    <string name="goUp">Go Up</string>
    <string name="all">Check All</string>
    <string name="none">Uncheck All</string>
    <string name="ext">External</string>
    <string name="Int">Internal</string>
    <string name="New">New Document</string>
    <string name="CNew">Enter New Folder Name</string>
    <string name="title_activity_upload">Upload Action</string>
    <string name="update_content">Upload successful</string>
    <string name="software_qde">Soft QDE</string>
    <string name="hardware_qde">Hard QDE</string>
    <string name="my_account">My profile</string>
    <string name="ex">Ex: </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="app_name">DIGI-MOBILE</string>
    <string name="title_activity_screen_logo">Screen Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_digi_mobi">DIGI-MOBILE Activity</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="supplement">Supplement</string>
    <string name="upload">Upload</string>
    <string name="signout">Sign out</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="title_activity_new_app">New App Activity</string>
    <string name="title_activity_new_app_detail">New App Activity Detail</string>
    <string name="checkall">Check all</string>
    <string name="deselectall">Deselect all</string>
    <string name="newcategory">New category</string>
    <string name="save">Save</string>
    <string name="rotateLeft">Rotate left</string>
    <string name="rotateRight">Rotate right</string>
    <string name="crop">Crop</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_crop">Crop Activity</string>
    <string name="newpicture">New picture</string>
    <string name="finish">Finish</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login">Log In</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="showpassword">Show password</string>
    <string name="title_activity_create_customer">Create Customer</string>
    <string name="create">Create</string>
    <string name="customername">Customer name</string>
    <string name="customer_information">Customer Information</string>
    <string name="title_activity_document_type">Document Type</string>
    <string name="choose_type">Choose a document type</string>
    <string name="create_folder_error">Can\'t create folder for application</string>
    <string name="title_activity_list_customer">List Customer</string>
    <string name="title_activity_review">Review Activity</string>
    <string name="home">Home</string>
    <string name="title_activity_option">Option</string>
    <string name="idCard">Indentify Card</string>
    <string name="channelSale">Channel Sales</string>
    <string name="review">Review </string>
    <string name="error_customer_name">Customer name must be UPPERCASE and not empty</string>
    <string name="error_customer_id">The length of Identity Card must be 8|9|12 and NUMBERIC</string>
    <string name="error_id">The length of ID must be 7 and NUMBERIC</string>
    <string name="error_channel">The length of Channel must be 3, UPPERCASE and not empty</string>
    <string name="error_empty">Not empty</string>
    <string name="exNew">NGUYEN VAN A_123456789_ABC</string>
    <string name="exSupplenment">NGUYEN VAN A_123456789_ABC_1234567</string>
    <string name="warning">Warning</string>
    <string name="fix_error">Please fix error before continuing</string>
    <string name="create_folder_upload">You must create folder before uploading</string>
    <string name="title_activity_create_folder">Create Folder</string>
    <string name="my_folder">My folder</string>
    <string name="my_id">My ID</string>
    <string name="date">Date</string>
    <string name="ordinal_number">Ordinal number</string>
    <string name="error_date">Date must follow the rule "yyyymmdd" and not empty</string>
    <string name="error_ordinal_number">The length of Ordinal number must be 2, NUMERIC, equal to the real number that uploaded and not empty</string>
    <string name="signout_title">Do you want to sign out?</string>
    <string name="dialog_exit">Do you want to exit?</string>
    <string name="signout_message">Your user account has been changed. Please sign out and sign in again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="createPDF">Please select images</string>
    <string name="uploadPDF">Please select PDF files</string>
    <string name="upload_successfull">Upload successful</string>
    <string name="delete_file">Do you want to delete? </string>
    <string name="open_file">Do you want to open it?</string>
    <string name="title_open_file">Open file</string>
    <string name="reason">Reason</string>
    <string name="helpDigi">DIGI-MOBILE Help!</string>
    <string name="exit">Exit</string>
    <string name="error">Error</string>
    <string name="not_support">This file type is not supported.</string>
    <string name="create_document_upload">Please provide 3 documents (DN.pdf, ID.pdf, HK.pdf) before continuing.</string>
    <string name="warning_exit">Do you want to exit?</string>
    <string name="fill_reason">Please fill the reason.</string>
    <string name="login_success">Login successful</string>
    <string name="pwd_incorrect">The user name or password is incorrect</string>
    <string name="error_404">Error 404: Requested resource not found</string>
    <string name="error_500">Error 500: Something went wrong</string>
    <string name="error_connected">Could not connected to Internet or remoted server</string>
    <string name="json_invalid">Invalid JSON</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">History</string>

</resources>