<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:text="@string/customer_information"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue_3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/blue_3" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt_login" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_upload_small" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/LinearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue_3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:lines="2"
                android:text="@string/exNew"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue_3"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edCode"
                style="@android:style/Theme.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_id"
                android:ems="10"
                android:hint="ID"
                android:inputType="number"
                android:maxLength="7" />

            <Button
                android:id="@+id/btnCheckID"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bt_login"
                android:text="Check"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextUserName"
            style="@android:style/Theme.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:drawableLeft="@drawable/ic_customer"
            android:ems="10"
            android:hint="@string/customername"
            android:inputType="textCapCharacters"
            android:maxLines="2" />

        <EditText
            android:id="@+id/EditText01"
            style="@android:style/Theme.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_card"
            android:ems="10"
            android:hint="@string/idCard"
            android:inputType="number"
            android:maxLength="12" />

        <EditText
            android:id="@+id/EditText02"
            style="@android:style/Theme.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_channel"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/channelSale"
            android:inputType="text"
            android:maxLines="1"
            android:text="ABC" />

        <EditText
            android:id="@+id/edReason"
            style="@android:style/Theme.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_reason"
            android:ems="10"
            android:hint="@string/reason"
            android:inputType="textCapCharacters"
            android:maxLines="2" />
    </LinearLayout>

</RelativeLayout>