<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bt_login" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/customer_information"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue_3"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitle"
        android:background="@color/blue_3" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ex"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue_3"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/EditText01"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextUserName"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_card"
                android:ems="10"
                android:hint="@string/idCard"
                android:inputType="number"
                android:maxLength="12" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextUserName"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="25dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                android:drawableLeft="@drawable/ic_customer"
                android:ems="10"
                android:hint="@string/customername"
                android:inputType="textCapCharacters"
                android:maxLines="2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textView1"
                android:text="@string/exNew"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue_3"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/EditText02"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/EditText01"
                android:layout_marginTop="15dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:drawableLeft="@drawable/ic_channel"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/channelSale"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:maxLines="1"
                android:text="ABC" />

            <EditText
                android:id="@+id/edCode"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/EditText02"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_id"
                android:ems="10"
                android:hint="ID"
                android:inputType="number"
                android:maxLength="7" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>