<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <RelativeLayout
            android:id="@+id/LinearLayoutHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_login" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/LinearLayoutBefore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_login" >

            <ImageView
                android:id="@+id/ImageView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_before" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/customer_information"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue_3"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitle"
        android:background="@color/blue_3" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex"
                    android:textColor="@color/blue_3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exNew"
                    android:textColor="@color/blue_3"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/edCode"
                    style="@android:style/Theme.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_id"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="7" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/btnCheckID"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bt_login"
                    android:text="Check"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextUserName"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                android:drawableLeft="@drawable/ic_customer"
                android:hint="@string/customername"
                android:inputType="textCapCharacters"
                android:maxLines="2" />

            <EditText
                android:id="@+id/EditText01"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_card"
                android:ems="10"
                android:hint="@string/idCard"
                android:inputType="number"
                android:maxLength="12" />

            <EditText
                android:id="@+id/EditText02"
                style="@android:style/Theme.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_channel"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/channelSale"
                android:inputType="text"
                android:maxLines="1"
                android:text="ABC" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>